<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlDetails"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"/>

    </android.support.design.widget.AppBarLayout>


    <FrameLayout
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llControlls"
        android:layout_below="@+id/app_bar"
         />

    <LinearLayout
        android:id="@+id/llControlls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_grey"
        android:layout_margin="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/bPrev"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            style="@style/white18"
            android:text="@string/prev"
            />

        <Button
            android:id="@+id/bNext"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/white18"
            android:background="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

    </LinearLayout>


</RelativeLayout>